# solana

./: .envrc  .gitignore  Cargo.toml  cargo-build-sbf-main.patch  cargo-build-sbf-no-rustup.patch  flake.nix
crates/new/: Cargo.toml
crates/new/src/: main.rs
my-project/: Anchor.toml
my-project/programs/my-project/src/: lib.rs
